# Hw08_web

./: README.md  pyproject.toml
part_duo/: config.ini  connect.py  consumer.py  models.py  producer.py
part_uno/: config.ini  connect.py  connection.py  json_to_db.py  models.py  search_in_db.py
