[tool.poetry]
name = "hw08-web"
version = "0.1.0"
description = "Hw08 NoSQL DB"
authors = ["Dishalex <dishalex@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hw08_web"}]

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.6.0"
mongoengine = "^0.27.0"
pika = "^1.3.2"
faker = "^19.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
